--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ Options -Indexes
 DirectoryIndex index.php index.html
 RewriteEngine on
 #RewriteBase /
-RewriteBase /php/rnd/mcs
+RewriteBase /php/ci_google_cloud
 RewriteCond $1 !^(index\.php|images|robots\.txt)
 RewriteCond $1 !^(index\.php|img|css|js|install|robots\.txt|favicon\.ico|update\.php)
 RewriteCond %{REQUEST_FILENAME} !-f
